test_files/netlist_footer_cmp/valid/valid_case_06_a.net
V1 IN 0 12
R1 IN OUT 5k
R2 OUT 0 1k
.tf V(OUT) V1
.backanno
.end
