test_files/netlist_footer_cmp/invalid/invalid_case_06_b.net
V1 IN 0 12
R1 IN MID 5k
R2 MID 0 1k
.tf V(IN) V1
.backanno
.end
